--- a/package.json
+++ b/package.json
@@ -1,6 +1,16 @@
 {
   "dependencies": {
     "ejs": "^3.1.9",
+    "ejs-mate": "^4.0.0",
     "express": "^4.18.2"
-  }
+  },
+  "name": "portfolio",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "vibhuRathore",
+  "license": "ISC",
+  "description": ""
 }
